# ExApp

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  make.bat  pyproject.toml
.github/workflows/: python-package.yml
doc/: conf.py  index.rst  requirements.txt
doc/source/: conf.py  index.rst  requirements.txt
exapp/: ExampleApp.py  __init__.py  __main__.py  exampleLoaderTemplate_generic.py  image_as_py.py  main_cli.py  utils.py
