[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exapp"
version = "0.2"
description = "A Python Example Launcher Application"
authors = [
  { name = "Euiyun Edwin Kim", email = "geniuskey@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "example",
  "gui",
  "application",
]
requires-python = ">=3.7"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pyqtgraph>=0.12",
  'colorama>=0.4.4; sys_platform == "win32"',
  'tomli; python_version < "3.11"',
]

[project.scripts]
exapp = "exapp.main:cli"

[project.urls]
Documentation = "https://exapp.readthedocs.io"
Repository = "https://github.com/allinpy/ExApp.git"


[project.optional-dependencies]
gui = ["PyQt5", "PySide2"]
doc = ["sphinx", "sphinx-rtd-theme"]
